Add 검색어 중복제거 commit